# pyproject.toml
[tool.poetry]
name = "engenharia-dados-cotacao-moedas"
version = "0.1.0"
description = "Projeto de engenharia de dados para cotação de moedas"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.26.0"
pandas = "^1.3.3"
swagger-ui = "^0.1.2"
connexion = {extras = ["swagger-ui"], version = "^3.0.6"}
duckdb = "^0.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
